# ray_marching_demo

./: .gitignore  CMakePresets.json  build_debug
project_info/: cpu_rendering.md  project.md  skeleton_code.md
src/: CMakeLists.txt  box2d.cpp  box2d.h  camera.cpp  camera.h  common_defs.h  cube.cpp  cube.h  main.cpp  mat3.cpp  mat3.h  object.cpp  object.h  pch.h  result.h  scene.cpp  scene.h  sphere.h  util.cpp  util.h  vec2.h  vec3.h
